--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 						<div class="display-tc animate-box" data-animate-effect="fadeIn">
 							<h1Hola , soy Eduardo Robles Espinosa Consultor Immunotec®</h1>
 							<h2>Permiteme enseñarte como formar parte del grupo de ganadores de elite de Immunotec® México</h2>
-							<p>Acompañame y disfruta del tour "Bienvenido !"</p>
+							<p><a href="#" class="btn btn-default">Bienvenido !</a></p>
 						</div>
 					</div>
 				</div>
