--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 					<div class="display-t">
 						<div class="display-tc animate-box" data-animate-effect="fadeIn">
 							<h1Hola , soy Eduardo Robles Espinosa Consultor Immunotec®</h1>
-							<h2>Permiteme enseñarte como formar parte del grupo de ganadores de elite de Immunotec® México</h2>
+							<h2>Esta es la forma de pertenecer al grupo más exclusivo de Immunotec®</h2>
 							<p><a href="#" class="btn btn-default">Bienvenido !</a></p>
 						</div>
 					</div>
