--- a/index.html
+++ b/index.html
@@ -109,6 +109,9 @@
 						<div class="display-tc animate-box" data-animate-effect="fadeIn">
 							<h1Hola , soy Eduardo Robles Espinosa Consultor Immunotec®</h1>
 							<h2>Esta es la forma de pertenecer al grupo más exclusivo de Immunotec®</h2>
+							<p><h2>En este sitio encontrarás la información necesaria para realizar una inscripción de nuevos consultores</h2></p>
+							<p><h2>En Immunotec® estamos capacitados para mostrar la nueva forma de hacer negocios en México y el mundo</h2></p>
+							<p><h2>Para más información de próximos eventos no dudes en contactarme a la brevedad.</h2></p>
 							<p><a href="#" class="btn btn-default">Bienvenido !</a></p>
 						</div>
 					</div>
