--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 					</div>
 				</div>
 				<div class="col-forth fh5co-video fh5co-bg" style="background-image: url(images/image_1.jpg)">
-					<a href="https://vimeo.com/channels/staffpicks/93951774" class="popup-vimeo"><i class="icon-video2"></i></a>
+					<a href="https://vimeo.com/259574666" class="popup-vimeo"><i class="icon-video2"></i></a>
 						<div class="overlay"></div>
 				</div>
 			</div>
