--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
 			<div class="row">
 				<div class="project">
 					<div class="col-md-8 col-md-push-5 animate-box" data-animate-effect="fadeInLeft">
-						<img class="img-responsive" src="images/work_1.png" alt="work">
+						<img class="img-responsive" src="images/work_2.jpg" alt="work">
 					</div>
 					<div class="col-md-4 col-md-pull-8 animate-box" data-animate-effect="fadeInRight">
 						<div class="mt">
@@ -289,7 +289,7 @@
 				</div>
 				<div class="project">
 					<div class="col-md-8 col-md-pull-1 animate-box" data-animate-effect="fadeInLeft">
-						<img class="img-responsive" src="images/work_1.png" alt="work">
+						<img class="img-responsive" src="images/work_3.jpg" alt="work">
 					</div>
 					<div class="col-md-4 animate-box" data-animate-effect="fadeInRight">
 						<div class="mt">
