--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
 					<div class="display-t">
 						<div class="display-tc animate-box" data-animate-effect="fadeIn">
 							
-							<h2>Esta es la forma de pertenecer al grupo más exclusivo de Immunotec®</h2>
-							<p><a href="#" class="btn btn-default">Bienvenido !</a></p>
+							<h2>This is the way to belong to the most exclusive group of Immunotec®</h2>
+							<p><a href="#" class="btn btn-default">Welcome home!</a></p>
 						</div>
 					</div>
 				</div>
