--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 						<div class="display-tc animate-box" data-animate-effect="fadeIn">
 							
 							<h2>This is the way to belong to the most exclusive group of Immunotec®</h2>
-							<p><a href="#" class="btn btn-default">Welcome home!</a></p>
+							<p><a href="#" class="btn btn-default">Welcome</a></p>
 						</div>
 					</div>
 				</div>
