--- a/index.html
+++ b/index.html
@@ -307,7 +307,26 @@
 							</div>
 						</div>
 					</div>
-				</div>	
+				</div>
+				<div class="row">
+				<div class="project">
+					<div class="col-md-8 col-md-push-5 animate-box" data-animate-effect="fadeInLeft">
+						<img class="img-responsive" src="images/work_2.jpg" alt="work">
+					</div>
+					<div class="col-md-4 col-md-pull-8 animate-box" data-animate-effect="fadeInRight">
+						<div class="mt">
+							<h3>Real Project For Real Solutions</h3>
+							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. </p>
+							<ul class="list-nav">
+								<li><i class="icon-check"></i>Far far away, behind the word</li>
+								<li><i class="icon-check"></i>There live the blind texts</li>
+								<li><i class="icon-check"></i>Separated they live in bookmarksgrove</li>
+								<li><i class="icon-check"></i>Semantics a large language ocean</li>
+								<li><i class="icon-check"></i>A small river named Duden</li>
+							</ul>
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
 	</div>
