--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
 				<div class="row">
 				<div class="project">
 					<div class="col-md-8 col-md-push-5 animate-box" data-animate-effect="fadeInLeft">
-						<img class="img-responsive" src="images/work_2.jpg" alt="work">
+						<img class="img-responsive" src="images/work_4.png" alt="work">
 					</div>
 					<div class="col-md-4 col-md-pull-8 animate-box" data-animate-effect="fadeInRight">
 						<div class="mt">
@@ -326,6 +326,27 @@
 							</ul>
 						</div>
 					</div>
+					<div class="project">
+					<div class="col-md-8 col-md-pull-1 animate-box" data-animate-effect="fadeInLeft">
+						<img class="img-responsive" src="images/work_5.jpg" alt="work">
+					</div>
+					<div class="col-md-4 animate-box" data-animate-effect="fadeInRight">
+						<div class="mt">
+							<div>
+								<h4><i class="icon-user"></i>Real Project For Real Solutions</h4>
+								<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
+							</div>
+							<div>
+								<h4><i class="icon-video2"></i>Real Project For Real Solutions</h4>
+								<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
+							</div>
+							<div>
+								<h4><i class="icon-shield"></i>Real Project For Real Solutions</h4>
+								<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
+							</div>
+						</div>
+					</div>
+				</div>
 				</div>
 			</div>
 		</div>
