--- a/index.html
+++ b/index.html
@@ -326,6 +326,10 @@
 							</ul>
 						</div>
 					</div>
+					
+				</div>
+				</div>
+				<div class="row">
 					<div class="project">
 					<div class="col-md-8 col-md-pull-1 animate-box" data-animate-effect="fadeInLeft">
 						<img class="img-responsive" src="images/work_5.jpg" alt="work">
@@ -346,7 +350,6 @@
 							</div>
 						</div>
 					</div>
-				</div>
 				</div>
 			</div>
 		</div>
