--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 							<div class="col-md-5 col-sm-5">
 								<div class="feature-left animate-box" data-animate-effect="fadeInLeft">
 									<span class="icon">
-										<i class="icon-check"></i>
+										<i class="icon-plus"></i>
 									</span>
 									<div class="feature-copy">
 										<h3>Retina Ready</h3>
@@ -198,7 +198,7 @@
 
 								<div class="feature-left animate-box" data-animate-effect="fadeInLeft">
 									<span class="icon">
-										<i class="icon-check"></i>
+										<i class="icon-plus"></i>
 									</span>
 									<div class="feature-copy">
 										<h3>Fully Responsive</h3>
@@ -208,7 +208,7 @@
 
 								<div class="feature-left animate-box" data-animate-effect="fadeInLeft">
 									<span class="icon">
-										<i class="icon-check"></i>
+										<i class="icon-plus"></i>
 									</span>
 									<div class="feature-copy">
 										<h3>Ready To Use</h3>
@@ -278,11 +278,11 @@
 							<h3>Real Project For Real Solutions</h3>
 							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. </p>
 							<ul class="list-nav">
-								<li><i class="icon-check"></i>Far far away, behind the word</li>
-								<li><i class="icon-check"></i>There live the blind texts</li>
-								<li><i class="icon-check"></i>Separated they live in bookmarksgrove</li>
-								<li><i class="icon-check"></i>Semantics a large language ocean</li>
-								<li><i class="icon-check"></i>A small river named Duden</li>
+								<li><i class="icon-plus"></i>Far far away, behind the word</li>
+								<li><i class="icon-plus"></i>There live the blind texts</li>
+								<li><i class="icon-plus"></i>Separated they live in bookmarksgrove</li>
+								<li><i class="icon-plus"></i>Semantics a large language ocean</li>
+								<li><i class="icon-plus"></i>A small river named Duden</li>
 							</ul>
 						</div>
 					</div>
@@ -294,15 +294,15 @@
 					<div class="col-md-4 animate-box" data-animate-effect="fadeInRight">
 						<div class="mt">
 							<div>
-								<h4><i class="icon-user"></i>Real Project For Real Solutions</h4>
+								<h4><i class="icon-plus"></i>Real Project For Real Solutions</h4>
 								<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
 							</div>
 							<div>
-								<h4><i class="icon-video2"></i>Real Project For Real Solutions</h4>
+								<h4><i class="icon-plus"></i>Real Project For Real Solutions</h4>
 								<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
 							</div>
 							<div>
-								<h4><i class="icon-shield"></i>Real Project For Real Solutions</h4>
+								<h4><i class="icon-plus"></i>Real Project For Real Solutions</h4>
 								<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
 							</div>
 						</div>
@@ -318,11 +318,11 @@
 							<h3>Real Project For Real Solutions</h3>
 							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. </p>
 							<ul class="list-nav">
-								<li><i class="icon-check"></i>Far far away, behind the word</li>
-								<li><i class="icon-check"></i>There live the blind texts</li>
-								<li><i class="icon-check"></i>Separated they live in bookmarksgrove</li>
-								<li><i class="icon-check"></i>Semantics a large language ocean</li>
-								<li><i class="icon-check"></i>A small river named Duden</li>
+								<li><i class="icon-plus"></i>Far far away, behind the word</li>
+								<li><i class="icon-plus"></i>There live the blind texts</li>
+								<li><i class="icon-plus"></i>Separated they live in bookmarksgrove</li>
+								<li><i class="icon-plus"></i>Semantics a large language ocean</li>
+								<li><i class="icon-plus"></i>A small river named Duden</li>
 							</ul>
 						</div>
 					</div>
@@ -337,15 +337,15 @@
 					<div class="col-md-4 animate-box" data-animate-effect="fadeInRight">
 						<div class="mt">
 							<div>
-								<h4><i class="icon-user"></i>Real Project For Real Solutions</h4>
+								<h4><i class="icon-plus"></i>Real Project For Real Solutions</h4>
 								<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
 							</div>
 							<div>
-								<h4><i class="icon-video2"></i>Real Project For Real Solutions</h4>
+								<h4><i class="icon-plus"></i>Real Project For Real Solutions</h4>
 								<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
 							</div>
 							<div>
-								<h4><i class="icon-shield"></i>Real Project For Real Solutions</h4>
+								<h4><i class="icon-plus"></i>Real Project For Real Solutions</h4>
 								<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
 							</div>
 						</div>
