--- a/work.html
+++ b/work.html
@@ -130,7 +130,7 @@
 							<h3><a href="https://youtu.be/OsOVKd9rYLM" target="_blank">Las maneras de ganar dinero con Immunotec® en México</a></h3>
 							<span class="cat">Eduardo Robles Espinosa ID1223058</span>
 							<p>
-								<span class="download"><a href="#"><i class="icon-download"></i></a></span>
+								<span class="download"><a href="#"><i class="icon-video"></i></a></span>
 								<span class="love"><a href="#"><i class="icon-heart"></i></a></span>
 							</p>
 						</div>
@@ -139,8 +139,8 @@
 				<div class="col-md-4 col-sm-4 text-center animate-box">
 					<div class="work-grid" style="background-image: url(images/project-3.jpg);">
 						<div class="desc">
-							<h3><a href="#">Work Title Here</a></h3>
-							<span class="cat">Web Design</span>
+							<h3><a href="negocio/Documents/flyer-discoverImmunotec.pdf ">Discover Immunotec®</a></h3>
+							<span class="cat">Eduardo Robles Espinosa ID1223058</span>
 							<p>
 								<span class="download"><a href="#"><i class="icon-download"></i></a></span>
 								<span class="love"><a href="#"><i class="icon-heart"></i></a></span>
