--- a/work.html
+++ b/work.html
@@ -151,8 +151,8 @@
 				<div class="col-md-4 col-sm-4 text-center animate-box">
 					<div class="work-grid" style="background-image: url(images/project-4.jpg);">
 						<div class="desc">
-							<h3><a href="#">Work Title Here</a></h3>
-							<span class="cat">Web Design</span>
+							<h3><a href="https://eduardoroblesespinosa.github.io/negocio/Documents/promo-loyaltyProgram.pdf ">Loyalty Program</a></h3>
+							<span class="cat">Eduardo Robles Espinosa ID1223058</span>
 							<p>
 								<span class="download"><a href="#"><i class="icon-download"></i></a></span>
 								<span class="love"><a href="#"><i class="icon-heart"></i></a></span>
