--- a/work.html
+++ b/work.html
@@ -151,10 +151,10 @@
 				<div class="col-md-4 col-sm-4 text-center animate-box">
 					<div class="work-grid" style="background-image: url(images/project-4.jpg);">
 						<div class="desc">
-							<h3><a href="https://eduardoroblesespinosa.github.io/negocio/Documents/promo-loyaltyProgram.pdf" target="_blank">Loyalty Program</a></h3>
+							<h3><a href="https://eduardoroblesespinosa.github.io/negocio/Documents/prod-calcium-sellSheet.pdf" target="_blank">Calcium Sellsheet</a></h3>
 							<span class="cat">Eduardo Robles Espinosa ID1223058</span>
 							<p>
-								<span class="download"><a href="https://eduardoroblesespinosa.github.io/negocio/Documents/promo-loyaltyProgram.pdf"><i class="icon-download"></i></a></span>
+								<span class="download"><a href="https://eduardoroblesespinosa.github.io/negocio/Documents/prod-calcium-sellSheet.pdf"><i class="icon-download"></i></a></span>
 								
 							</p>
 						</div>
