--- a/work.html
+++ b/work.html
@@ -174,7 +174,7 @@
 				<div class="col-md-4 col-sm-4 text-center animate-box">
 					<div class="work-grid" style="background-image: url(images/project-6.jpg);">
 						<div class="desc">
-							<h3><a href="https://eduardoroblesespinosa.github.io/negocio/Documents/priceList.pdf">Work Title Here</a></h3>
+							<h3><a href="https://eduardoroblesespinosa.github.io/negocio/Documents/priceList.pdf">Price List</a></h3>
 							<span class="cat">Eduardo Robles Espinosa ID1223058</span>
 							<p>
 								<span class="download"><a href="https://eduardoroblesespinosa.github.io/negocio/Documents/priceList.pdf"><i class="icon-download"></i></a></span>
