--- a/work.html
+++ b/work.html
@@ -186,10 +186,10 @@
 				<div class="col-md-4 col-sm-4 text-center animate-box">
 					<div class="work-grid" style="background-image: url(images/project-7.jpg);">
 						<div class="desc">
-							<h3><a href="https://eduardoroblesespinosa.github.io/negocio/Documents/immunotec-storyBooklet.pdf ">Immunotec® Storybooklet</a></h3>
+							<h3><a href="https://eduardoroblesespinosa.github.io/negocio/Documents/immunotec-storyBooklet.pdf" target="_blank">Immunotec® Storybooklet</a></h3>
 							<span class="cat">Eduardo Robles Espinosa ID1223058</span>
 							<p>
-								<span class="download"><a href="negocio/Documents/immunotec-storyBooklet.pdf "><i class="icon-download"></i></a></span>
+								<span class="download"><a href="negocio/Documents/immunotec-storyBooklet.pdf" target="_blank"><i class="icon-download"></i></a></span>
 								
 							</p>
 						</div>
@@ -210,11 +210,11 @@
 				<div class="col-md-4 col-sm-4 text-center animate-box">
 					<div class="work-grid" style="background-image: url(images/project-9.jpg);">
 						<div class="desc">
-							<h3><a href="#">Work Title Here</a></h3>
-							<span class="cat">Web Design</span>
+							<h3><a href="negocio/Documents/businessguide.pdf" target="_blank">Guía de Negocios</a></h3>
+							<span class="cat">Eduardo Robles Espinosa ID1223058</span>
 							<p>
-								<span class="download"><a href="#"><i class="icon-download"></i></a></span>
-								<span class="love"><a href="#"><i class="icon-heart"></i></a></span>
+								<span class="download"><a href="negocio/Documents/businessguide.pdf" target="_blank"><i class="icon-download"></i></a></span>
+								
 							</p>
 						</div>
 					</div>
@@ -222,12 +222,11 @@
 				<div class="col-md-4 col-sm-4 text-center animate-box">
 					<div class="work-grid" style="background-image: url(images/project-10.jpg);">
 						<div class="desc">
-							<h3><a href="#">Work Title Here</a></h3>
+							<h3><a href="https://eduardoroblesespinosa.github.io/negocio/Documents/Como se avanza en immunotec.jpg">¿Como avanzar en Immunotec®?</a></h3>
 							<span class="cat">Web Design</span>
 							<p>
-								<span class="download"><a href="#"><i class="icon-download"></i></a></span>
-								<span class="love"><a href="#"><i class="icon-heart"></i></a></span>
-							</p>
+								<span class="download"><a href="https://eduardoroblesespinosa.github.io/negocio/Documents/Como se avanza en immunotec.jpg"><i class="icon-download"></i></a></span>
+															</p>
 						</div>
 					</div>
 				</div>
