--- a/work.html
+++ b/work.html
@@ -223,7 +223,7 @@
 					<div class="work-grid" style="background-image: url(images/project-10.jpg);">
 						<div class="desc">
 							<h3><a href="https://eduardoroblesespinosa.github.io/negocio/Documents/Como se avanza en immunotec.jpg">¿Como avanzar en Immunotec®?</a></h3>
-							<span class="cat">Web Design</span>
+							<span class="cat">Eduardo Robles Espinosa ID1223058</span>
 							<p>
 								<span class="download"><a href="https://eduardoroblesespinosa.github.io/negocio/Documents/Como se avanza en immunotec.jpg"><i class="icon-download"></i></a></span>
 															</p>
