--- a/work.html
+++ b/work.html
@@ -163,10 +163,10 @@
 				<div class="col-md-4 col-sm-4 text-center animate-box">
 					<div class="work-grid" style="background-image: url(images/project-5.jpg);">
 						<div class="desc">
-							<h3><a href="https://eduardoroblesespinosa.github.io/negocio/Documents/priceList.pdf" target="_blank" ">Price List</a></h3>
+							<h3><a href="https://eduardoroblesespinosa.github.io/negocio/Documents/priceList.pdf" target="_blank">Price List</a></h3>
 							<span class="cat">Eduardo Robles Espinosa ID1223058</span>
 							<p>
-								<span class="download"><a href="https://eduardoroblesespinosa.github.io/negocio/Documents/priceList.pdf"><i class="icon-download"></i></a></span>
+								<span class="download"><a href="https://eduardoroblesespinosa.github.io/negocio/Documents/priceList.pdf" target="_blank"><i class="icon-download"></i></a></span>
 										</p>
 						</div>
 					</div>
@@ -189,7 +189,7 @@
 							<h3><a href="https://eduardoroblesespinosa.github.io/negocio/Documents/immunotec-storyBooklet.pdf" target="_blank">Immunotec® Storybooklet</a></h3>
 							<span class="cat">Eduardo Robles Espinosa ID1223058</span>
 							<p>
-								<span class="download"><a href="negocio/Documents/immunotec-storyBooklet.pdf" target="_blank"><i class="icon-download"></i></a></span>
+								<span class="download"><a href="http://eduardoroblesespinosa.github.io/negocio/Documents/immunotec-storyBooklet.pdf" target="_blank"><i class="icon-download"></i></a></span>
 								
 							</p>
 						</div>
@@ -198,7 +198,7 @@
 				<div class="col-md-4 col-sm-4 text-center animate-box">
 					<div class="work-grid" style="background-image: url(images/project-8.jpg);">
 						<div class="desc">
-							<h3><a href="https://eduardoroblesespinosa.github.io/negocio/Documents/starterPacks.pdf ">Starter Packs</a></h3>
+							<h3><a href="https://eduardoroblesespinosa.github.io/negocio/Documents/starterPacks.pdf" target="_blank">Starter Packs</a></h3>
 							<span class="cat">Eduardo Robles Espinosa ID1223058</span>
 							<p>
 								<span class="download"><a href="https://eduardoroblesespinosa.github.io/negocio/Documents/starterPacks.pdf" target="_blank"><i class="icon-download"></i></a></span>
@@ -210,10 +210,10 @@
 				<div class="col-md-4 col-sm-4 text-center animate-box">
 					<div class="work-grid" style="background-image: url(images/project-9.jpg);">
 						<div class="desc">
-							<h3><a href="negocio/Documents/businessguide.pdf" target="_blank">Guía de Negocios</a></h3>
+							<h3><a href="http://eduardoroblesespinosa.github.io/negocio/Documents/businessguide.pdf" target="_blank">Guía de Negocios</a></h3>
 							<span class="cat">Eduardo Robles Espinosa ID1223058</span>
 							<p>
-								<span class="download"><a href="negocio/Documents/businessguide.pdf" target="_blank"><i class="icon-download"></i></a></span>
+								<span class="download"><a href="https://eduardoroblesespinosa.github.io/negocio/Documents/businessguide.pdf" target="_blank"><i class="icon-download"></i></a></span>
 								
 							</p>
 						</div>
@@ -222,10 +222,10 @@
 				<div class="col-md-4 col-sm-4 text-center animate-box">
 					<div class="work-grid" style="background-image: url(images/project-10.jpg);">
 						<div class="desc">
-							<h3><a href="https://eduardoroblesespinosa.github.io/negocio/Documents/Como se avanza en immunotec.jpg">¿Como avanzar en Immunotec®?</a></h3>
+							<h3><a href="https://eduardoroblesespinosa.github.io/negocio/Documents/Como se avanza en immunotec.jpg" target="_blank">¿Como avanzar en Immunotec®?</a></h3>
 							<span class="cat">Eduardo Robles Espinosa ID1223058</span>
 							<p>
-								<span class="download"><a href="https://eduardoroblesespinosa.github.io/negocio/Documents/Como se avanza en immunotec.jpg"><i class="icon-download"></i></a></span>
+								<span class="download"><a href="https://eduardoroblesespinosa.github.io/negocio/Documents/Como se avanza en immunotec.jpg" target="_blank"><i class="icon-download"></i></a></span>
 															</p>
 						</div>
 					</div>
