--- a/services.html
+++ b/services.html
@@ -123,9 +123,9 @@
 					<span class="icon">
 						<i class="icon-eye"></i>
 					</span>
-					<h3>Retina Ready</h3>
-					<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
-					<p><a href="#" class="btn btn-primary">Learn More</a></p>
+					<h3>Creación de plan de negocios</h3>
+					<p>Basado en información solicitada por instituciones bancarias o INADEM.</p>
+					<p><a href="#" class="btn btn-primary">Saber más</a></p>
 				</div>
 			</div>
 			<div class="col-md-4 col-sm-4">
@@ -133,9 +133,9 @@
 					<span class="icon">
 						<i class="icon-command"></i>
 					</span>
-					<h3>Fully Responsive</h3>
-					<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
-					<p><a href="#" class="btn btn-primary">Learn More</a></p>
+					<h3>Incubación y aceleración de ideas de negocio</h3>
+					<p>Programa de 3 etapas para poner en marcha ideas de negocio.</p>
+					<p><a href="#" class="btn btn-primary">Saber más</a></p>
 				</div>
 			</div>
 			<div class="col-md-4 col-sm-4">
@@ -143,9 +143,9 @@
 					<span class="icon">
 						<i class="icon-power"></i>
 					</span>
-					<h3>Web Starter</h3>
-					<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
-					<p><a href="#" class="btn btn-primary">Learn More</a></p>
+					<h3>Creación de página Web</h3>
+					<p>Asesoria y diseño de página web.</p>
+					<p><a href="#" class="btn btn-primary">Saber más</a></p>
 				</div>
 			</div>
 
@@ -154,9 +154,9 @@
 					<span class="icon">
 						<i class="icon-brush"></i>
 					</span>
-					<h3>Web Design</h3>
-					<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
-					<p><a href="#" class="btn btn-primary">Learn More</a></p>
+					<h3>Servicio Community Manager</h3>
+					<p>Manejo de redes sociales.</p>
+					<p><a href="#" class="btn btn-primary">Saber más</a></p>
 				</div>
 			</div>
 			<div class="col-md-4 col-sm-4">
@@ -164,9 +164,9 @@
 					<span class="icon">
 						<i class="icon-video2"></i>
 					</span>
-					<h3>Video Editing</h3>
-					<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
-					<p><a href="#" class="btn btn-primary">Learn More</a></p>
+					<h3>Coaching Empresarial</h3>
+					<p>Capacitación e implementación de las mejores estrategias de negocios.</p>
+					<p><a href="#" class="btn btn-primary">Saber más</a></p>
 				</div>
 			</div>
 			<div class="col-md-4 col-sm-4">
@@ -174,9 +174,9 @@
 					<span class="icon">
 						<i class="icon-help2"></i>
 					</span>
-					<h3>24/7 Help &amp; Support</h3>
-					<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
-					<p><a href="#" class="btn btn-primary">Learn More</a></p>
+					<h3>Validación de Ideas de Negocio</h3>
+					<p>Validación de Idea de Negocio bajo Metodología Startup.</p>
+					<p><a href="#" class="btn btn-primary">Saber más</a></p>
 				</div>
 			</div>
 		</div>
