--- a/services.html
+++ b/services.html
@@ -133,7 +133,7 @@
 					<span class="icon">
 						<i class="icon-command"></i>
 					</span>
-					<h3>Incubación y aceleración de ideas</h3>
+					<h3>Incubación y aceleración de</h3>
 					<p>Programa de 3 etapas para poner en marcha</p>
 					<p><a href="#" class="btn btn-primary">Saber más</a></p>
 				</div>
