--- a/services.html
+++ b/services.html
@@ -124,7 +124,7 @@
 						<i class="icon-eye"></i>
 					</span>
 					<h3>Creación de plan de negocios</h3>
-					<p>Basado en información solicitada por</p>
+					<p>Basado en información solicitada por instituciones bancarias o INADEM</p>
 					<p><a href="#" class="btn btn-primary">Saber más</a></p>
 				</div>
 			</div>
@@ -133,7 +133,7 @@
 					<span class="icon">
 						<i class="icon-command"></i>
 					</span>
-					<h3>Incubación y aceleración de</h3>
+					<h3>Aceleración de ideas de negocio</h3>
 					<p>Programa de 3 etapas para poner en marcha</p>
 					<p><a href="#" class="btn btn-primary">Saber más</a></p>
 				</div>
