--- a/services.html
+++ b/services.html
@@ -133,8 +133,8 @@
 					<span class="icon">
 						<i class="icon-command"></i>
 					</span>
-					<h3>Aceleración de ideas de negocio</h3>
-					<p>Programa de 3 etapas para poner en marcha</p>
+					<h3>Aceleración de negocio</h3>
+					<p>Programa de 3 etapas para poner en marcha ideas de negocio</p>
 					<p><a href="#" class="btn btn-primary">Saber más</a></p>
 				</div>
 			</div>
