--- a/services.html
+++ b/services.html
@@ -144,7 +144,7 @@
 						<i class="icon-power"></i>
 					</span>
 					<h3>Creación de página Web</h3>
-					<p>Asesoria y diseño de página web.</p>
+					<p>Asesoria y diseño de página web y marketing</p>
 					<p><a href="#" class="btn btn-primary">Saber más</a></p>
 				</div>
 			</div>
