--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 					<div class="display-t">
 						<div class="display-tc animate-box" data-animate-effect="fadeIn">
 							
-							<h2>This is the way to belong to the most exclusive community of <a href="https://www.immunotec.com/eduardoroblesespinosa">Immunotec®</a></h2>
+							<h2>Esta es la forma de pertenecer a la comunidad más exclusiva de <a href="https://www.immunotec.com/eduardoroblesespinosa">Immunotec®</a></h2>
 							<p><a href="#" class="btn btn-default">Welcome</a></p>
 						</div>
 					</div>
