--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 						<div class="display-tc animate-box" data-animate-effect="fadeIn">
 							
 							<h2>Esta es la forma de pertenecer a la comunidad más exclusiva de <a href="https://www.immunotec.com/eduardoroblesespinosa">Immunotec®</a></h2>
-							<p><a href="#" class="btn btn-default">Welcome</a></p>
+							<p><a href="#" class="btn btn-default">Bienvenido</a></p>
 						</div>
 					</div>
 				</div>
