--- a/index.html
+++ b/index.html
@@ -125,12 +125,12 @@
 						<div class="col-third">
 							<div class="col-md-12">
 								<span class="icon">
-									<i class="icon-eye"></i>
+									<i class="icon-file"></i>
 								</span>
 								<div class="desc">
-									<h3>Retina Ready</h3>
-									<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
-									<p><a href="#" class="btn btn-primary">Learn More</a></p>
+									<h3>Oportunidad de negocio</h3>
+									<p>Regístrate como Consultor Independiente y obten un 30% de descuento, tu propio centro de negocio con acceso a promociones exclusivas para consultores y los beneficios del plan de negocio de Immunotec.</p>
+									<p><a href="#" class="btn btn-primary">Saber más</a></p>
 								</div>
 							</div>
 						</div>
@@ -140,8 +140,9 @@
 									<i class="icon-power"></i>
 								</span>
 								<div class="desc">
-									<h3>Web Starter</h3>
-									<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
+									<h3>Consultor independiente</h3>
+									<p>Además al registrarte como consultor tienes la oportunidad de por UNICA VEZ de adquirir un Paquete de Inicio, con un descuento especial de hasta el 50%. 
+Exclusivamente en tu primera compra.</p>
 									<p><a href="#" class="btn btn-primary">Learn More</a></p>
 								</div>
 							</div>
@@ -152,8 +153,8 @@
 									<i class="icon-laptop"></i>
 								</span>
 								<div class="desc">
-									<h3>Fully Responsive</h3>
-									<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
+									<h3>Beneficios y más</h3>
+									<p>Puedes obtener un paquete de inicio, disponible por UNICA VEZ, para tu primera compra como CONSULTOR INDEPENDIENTE IMMUNOTEC® y obten un descuento de hasta un 50% sobre el precio al publico sugerido de los productos, dependiendo del paquete de inicio que elijas.</p>
 									<p><a href="#" class="btn btn-primary">Learn More</a></p>
 								</div>
 							</div>
