--- a/work.html
+++ b/work.html
@@ -130,7 +130,7 @@
 							<h3><a href="https://youtu.be/OsOVKd9rYLM" target="_blank">Las maneras de ganar dinero con Immunotec® en México</a></h3>
 							<span class="cat">Eduardo Robles Espinosa ID1223058</span>
 							<p>
-								<span class="download"><a href="https://youtu.be/OsOVKd9rYLM"><i class="icon-video"></i></a></span>
+								<span class="download"><a href="https://youtu.be/OsOVKd9rYLM" target="_blank"><i class="icon-video"></i></a></span>
 								
 							</p>
 						</div>
