--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 									<h3>Consultor independiente</h3>
 									<p>Además al registrarte como consultor tienes la oportunidad de por UNICA VEZ de adquirir un Paquete de Inicio, con un descuento especial de hasta el 50%. 
 Exclusivamente en tu primera compra.</p>
-									<p><a href="#" class="btn btn-primary">Learn More</a></p>
+									<p><a href="#" class="btn btn-primary">Saber más</a></p>
 								</div>
 							</div>
 						</div>
@@ -153,9 +153,9 @@ Exclusivamente en tu primera compra.</p>
 									<i class="icon-laptop"></i>
 								</span>
 								<div class="desc">
-									<h3>Beneficios y más</h3>
-									<p>Puedes obtener un paquete de inicio, disponible por UNICA VEZ, para tu primera compra como CONSULTOR INDEPENDIENTE IMMUNOTEC® y obten un descuento de hasta un 50% sobre el precio al publico sugerido de los productos, dependiendo del paquete de inicio que elijas.</p>
-									<p><a href="#" class="btn btn-primary">Learn More</a></p>
+									<h3>Beneficios</h3>
+									<p>Obten un descuento de hasta un 50% sobre el precio al publico sugerido de los productos, dependiendo del paquete de inicio que elijas.</p>
+									<p><a href="#" class="btn btn-primary">Saber más</a></p>
 								</div>
 							</div>
 						</div>
