--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 									<i class="icon-file"></i>
 								</span>
 								<div class="desc">
-									<h3>Oportunidad de negocio</h3>
+									<h3>Oportunidad</h3>
 									<p>Regístrate como Consultor Independiente y obten un 30% de descuento, tu propio centro de negocio con acceso a promociones exclusivas para consultores y los beneficios del plan de negocio de Immunotec.</p>
 									<p><a href="#" class="btn btn-primary">Saber más</a></p>
 								</div>
@@ -140,7 +140,7 @@
 									<i class="icon-power"></i>
 								</span>
 								<div class="desc">
-									<h3>Consultor independiente</h3>
+									<h3>Consultor</h3>
 									<p>Además al registrarte como consultor tienes la oportunidad de por UNICA VEZ de adquirir un Paquete de Inicio, con un descuento especial de hasta el 50%. 
 Exclusivamente en tu primera compra.</p>
 									<p><a href="#" class="btn btn-primary">Saber más</a></p>
