--- a/index.html
+++ b/index.html
@@ -176,8 +176,8 @@ Exclusivamente en tu primera compra.</p>
 					<div class="col-feature-9">
 						<div class="row">
 							<div class="col-md-12 fh5co-heading animate-box">
-								<h2>Core Features</h2>
-								<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
+								<h2>Registro paso a paso</h2>
+								<p>A continuación la forma correcta para realizar tu registro como Consultor Independiente Immunotec®</p>
 							</div>
 						</div>
 						<div class="row">
