--- a/index.html
+++ b/index.html
@@ -192,8 +192,8 @@ Exclusivamente en tu primera compra.</p>
 										<i class="icon-plus"></i>
 									</span>
 									<div class="feature-copy">
-										<h3>Retina Ready</h3>
-										<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit.</p>
+										<h3>URL</h3>
+										<p>https://www.immunotec.com/eduardoroblesespinosa</p>
 									</div>
 								</div>
 
@@ -202,8 +202,8 @@ Exclusivamente en tu primera compra.</p>
 										<i class="icon-plus"></i>
 									</span>
 									<div class="feature-copy">
-										<h3>Fully Responsive</h3>
-										<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit.</p>
+										<h3>Sitio Oficial</h3>
+										<p>Página principal consultor independiente Eduardo Robles Espinosa ID 1223058</p>
 									</div>
 								</div>
 
@@ -212,8 +212,8 @@ Exclusivamente en tu primera compra.</p>
 										<i class="icon-plus"></i>
 									</span>
 									<div class="feature-copy">
-										<h3>Ready To Use</h3>
-										<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit.</p>
+										<h3>Botón Empieza ahora</h3>
+			 							<p>En el cuerpo de la página principal se encuentra un elemento web que tiene la finalidad de direccionarnos a la página de enrolamiento</p>
 									</div>
 								</div>
 							</div>
