--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@ Exclusivamente en tu primera compra.</p>
 										<i class="icon-plus"></i>
 									</span>
 									<div class="feature-copy">
-										<h3>Sitio Oficial</h3>
+										<h3>Autor.-Immunotec® México</h3>
 										<p>Página principal consultor independiente Eduardo Robles Espinosa ID 1223058</p>
 									</div>
 								</div>
@@ -234,19 +234,19 @@ Exclusivamente en tu primera compra.</p>
 										</div>
 										<div class="col-md-12 animate-box">
 											<div class="feature-center">
-												<span class="counter js-counter" data-from="0" data-to="97" data-speed="5000" data-refresh-interval="50">1</span>
+												<span class="counter js-counter" data-from="0" data-to="2572" data-speed="5000" data-refresh-interval="50">1</span>
 												<span class="counter-label">Happy Clients</span>
 											</div>
 										</div>
 										<div class="col-md-12 animate-box">
 											<div class="feature-center">
-												<span class="counter js-counter" data-from="0" data-to="402" data-speed="5000" data-refresh-interval="50">1</span>
+												<span class="counter js-counter" data-from="0" data-to="2158" data-speed="5000" data-refresh-interval="50">1</span>
 												<span class="counter-label">Projects Done</span>
 											</div>
 										</div>
 										<div class="col-md-12 animate-box">
 											<div class="feature-center">
-												<span class="counter js-counter" data-from="0" data-to="4523" data-speed="5000" data-refresh-interval="50">1</span>
+												<span class="counter js-counter" data-from="0" data-to="45239" data-speed="5000" data-refresh-interval="50">1</span>
 												<span class="counter-label">Hours Spent</span>
 
 											</div>
@@ -265,8 +265,9 @@ Exclusivamente en tu primera compra.</p>
 		<div class="container">
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-					<h2>Finished Project</h2>
-					<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
+					<h2>Procedimiento básico</h2>
+					<p>La información presentada a continuación tiene el objetivo de capacitar al público en general sobre
+						como realizar la inscripción de un nuevo consultor o bien un nuevo cliente.</p>
 				</div>
 			</div>
 			<div class="row">
