--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@ Exclusivamente en tu primera compra.</p>
 									</span>
 									<div class="feature-copy">
 										<h3>URL</h3>
-										<p><a href="https://www.immunotec.com/eduardoroblesespinosa">Mi sitio</a></p>
+										<p><a href="https://www.immunotec.com/eduardoroblesespinosa">www.immunotec.com/eduardoroblesespinosa</a></p>
 									</div>
 								</div>
 
