--- a/index.html
+++ b/index.html
@@ -266,8 +266,7 @@ Exclusivamente en tu primera compra.</p>
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
 					<h2>Procedimiento básico</h2>
-					<p>La información presentada a continuación tiene el objetivo de capacitar al público en general sobre
-						como realizar la inscripción de un nuevo consultor o bien un nuevo cliente.</p>
+					<p>¿Cómo realizar una inscripción en 5 minutos?</p>
 				</div>
 			</div>
 			<div class="row">
@@ -277,14 +276,14 @@ Exclusivamente en tu primera compra.</p>
 					</div>
 					<div class="col-md-4 col-md-pull-8 animate-box" data-animate-effect="fadeInRight">
 						<div class="mt">
-							<h3>Real Project For Real Solutions</h3>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. </p>
+							<h3>Enrolamiento</h3>
+							<p>La página de enrolamiento tiene una función bidireccional , es decir tiene la opción para unirte como consultor independiente ó cliente. </p>
 							<ul class="list-nav">
-								<li><i class="icon-plus"></i>Far far away, behind the word</li>
-								<li><i class="icon-plus"></i>There live the blind texts</li>
-								<li><i class="icon-plus"></i>Separated they live in bookmarksgrove</li>
-								<li><i class="icon-plus"></i>Semantics a large language ocean</li>
-								<li><i class="icon-plus"></i>A small river named Duden</li>
+								<li><i class="icon-plus"></i>Bienestar y un exitoso negocio</li>
+								<li><i class="icon-plus"></i>Línea de productos de alta calidad</li>
+								<li><i class="icon-plus"></i>Desarrollo en equipo</li>
+								<li><i class="icon-plus"></i>Cliente preferencial -25%</li>
+								<li><i class="icon-plus"></i>Generoso plan de compensación</li>
 							</ul>
 						</div>
 					</div>
