--- a/index.html
+++ b/index.html
@@ -279,11 +279,11 @@ Exclusivamente en tu primera compra.</p>
 							<h3>Enrolamiento</h3>
 							<p>La página de enrolamiento tiene una función bidireccional , es decir tiene la opción para unirte como consultor independiente ó cliente. </p>
 							<ul class="list-nav">
-								<li><i class="icon-plus"></i>Bienestar y un exitoso negocio</li>
-								<li><i class="icon-plus"></i>Línea de productos de alta calidad</li>
-								<li><i class="icon-plus"></i>Desarrollo en equipo</li>
-								<li><i class="icon-plus"></i>Cliente preferencial -25%</li>
-								<li><i class="icon-plus"></i>Generoso plan de compensación</li>
+								<li><h4><i class="icon-plus"></i></h4>Bienestar y un exitoso negocio</li>
+								<li><h4><i class="icon-plus"></i></h4>Línea de productos de alta calidad</li>
+								<li><h4><i class="icon-plus"></i></h4>Desarrollo en equipo</li>
+								<li><h4><i class="icon-plus"></i></h4>Cliente preferencial -25%</li>
+								<li><h4><i class="icon-plus"></i></h4>Generoso plan de compensación</li>
 							</ul>
 						</div>
 					</div>
