--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@ Exclusivamente en tu primera compra.</p>
 					</div>
 					<div class="col-md-4 col-md-pull-8 animate-box" data-animate-effect="fadeInRight">
 						<div class="mt">
-							<h3>Enrolamiento</h3>
+							<h3>Página Enrolamiento</h3>
 							<p>La página de enrolamiento tiene una función bidireccional , es decir tiene la opción para unirte como consultor independiente ó cliente. </p>
 							<ul class="list-nav">
 								<li><i class="icon-plus"></i><h4>Bienestar y un exitoso negocio</h4></li>
@@ -295,6 +295,7 @@ Exclusivamente en tu primera compra.</p>
 					<div class="col-md-4 animate-box" data-animate-effect="fadeInRight">
 						<div class="mt">
 							<div>
+								<h3>Página Configuración</h3>
 								<h4><i class="icon-plus"></i>Configuración de inscripción</h4>
 								
 							</div>
