--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@ Exclusivamente en tu primera compra.</p>
 										<i class="icon-plus"></i>
 									</span>
 									<div class="feature-copy">
-										<h3>URL</h3>
+										<h3>URL PÁGINA DE INICIO</h3>
 										<p><a href="https://www.immunotec.com/eduardoroblesespinosa">www.immunotec.com/eduardoroblesespinosa</a></p>
 									</div>
 								</div>
