--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@ Exclusivamente en tu primera compra.</p>
 						<div class="row">
 							<div class="col-md-12 fh5co-heading animate-box">
 								<h2>Registro paso a paso</h2>
-								<p>A continuación la forma correcta para realizar tu registro como Consultor Independiente Immunotec®</p>
+								<p>Instrucciones para realizar el registro de nuevo Consultor Independiente Immunotec®</p>
 							</div>
 						</div>
 						<div class="row">
@@ -283,7 +283,7 @@ Exclusivamente en tu primera compra.</p>
 								<li><i class="icon-plus"></i><h4>Línea de productos de alta calidad</h4></li>
 								<li><i class="icon-plus"></i><h4>Desarrollo en equipo</h4></li>
 								<li><i class="icon-plus"></i><h4>Cliente preferencial -25%</h4></li>
-								<li><i class="icon-plus"></i><h4>Generoso plan de compensación</h4></li>
+								<li><i class="icon-plus"></i><h4>URL</h4><a href="https://www.immunotec.com/eduardoroblesespinosa/enrollment">www.immunotec.com/eduardoroblesespinosa/enrollment</a></li>
 							</ul>
 						</div>
 					</div>
@@ -307,6 +307,10 @@ Exclusivamente en tu primera compra.</p>
 								<h4><i class="icon-plus"></i>Muestra el botón para realizar la inscripción</h4>
 								
 							</div>
+							<div>
+								<h4><i class="icon-plus"></i>URL</h4><a href="https://www.immunotec.com/eduardoroblesespinosa/enrollment/enrollmentconfiguration">www.immunotec.com/eduardoroblesespinosa/enrollment/enrollmentconfiguration</a>
+								
+							</div>
 						</div>
 					</div>
 				</div>
@@ -317,7 +321,7 @@ Exclusivamente en tu primera compra.</p>
 					</div>
 					<div class="col-md-4 col-md-pull-8 animate-box" data-animate-effect="fadeInRight">
 						<div class="mt">
-							<h3>Real Project For Real Solutions</h3>
+							<h3>Página de productos</h3>
 							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. </p>
 							<ul class="list-nav">
 								<li><i class="icon-plus"></i>Far far away, behind the word</li>
