--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@ Exclusivamente en tu primera compra.</p>
 								<li><i class="icon-plus"></i><h4>Línea de productos de alta calidad</h4></li>
 								<li><i class="icon-plus"></i><h4>Desarrollo en equipo</h4></li>
 								<li><i class="icon-plus"></i><h4>Cliente preferencial -25%</h4></li>
-								<li><i class="icon-plus"></i><h4>URL</h4><a href="https://www.immunotec.com/eduardoroblesespinosa/enrollment">www.immunotec.com/eduardoroblesespinosa/enrollment</a></li>
+								<li><i class="icon-plus"></i><a href="https://www.immunotec.com/eduardoroblesespinosa/enrollment">www.immunotec.com/eduardoroblesespinosa/enrollment</a></li>
 							</ul>
 						</div>
 					</div>
@@ -308,7 +308,7 @@ Exclusivamente en tu primera compra.</p>
 								
 							</div>
 							<div>
-								<h4><i class="icon-plus"></i>URL</h4><a href="https://www.immunotec.com/eduardoroblesespinosa/enrollment/enrollmentconfiguration">www.immunotec.com/eduardoroblesespinosa/enrollment/enrollmentconfiguration</a>
+								<i class="icon-plus"></i>URL<a href="https://www.immunotec.com/eduardoroblesespinosa/enrollment/enrollmentconfiguration">www.immunotec.com/eduardoroblesespinosa/enrollment/enrollmentconfiguration</a>
 								
 							</div>
 						</div>
