--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@ Exclusivamente en tu primera compra.</p>
 								
 							</div>
 							<div>
-								<i class="icon-plus"></i>URL<a href="https://www.immunotec.com/eduardoroblesespinosa/enrollment/enrollmentconfiguration">www.immunotec.com/eduardoroblesespinosa/enrollment/enrollmentconfiguration</a>
+								<i class="icon-plus"></i><a href="https://www.immunotec.com/eduardoroblesespinosa/enrollment/enrollmentconfiguration">www.immunotec.com/eduardoroblesespinosa/enrollment/enrollmentconfiguration</a>
 								
 							</div>
 						</div>
