--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@ Exclusivamente en tu primera compra.</p>
 							<h3>Página Enrolamiento</h3>
 							<p>La página de enrolamiento tiene una función bidireccional , es decir tiene la opción para unirte como consultor independiente ó cliente. </p>
 							<ul class="list-nav">
-								<li><i class="icon-plus"></i><h4>Bienestar y un exitoso negocio</h4></li>
+								<li><i class="icon-plus"></i><h4>Inscribete como consultor o cliente</h4></li>
 								<li><i class="icon-plus"></i><h4>Línea de productos de alta calidad</h4></li>
 								<li><i class="icon-plus"></i><h4>Desarrollo en equipo</h4></li>
 								<li><i class="icon-plus"></i><h4>Cliente preferencial -25%</h4></li>
@@ -322,14 +322,14 @@ Exclusivamente en tu primera compra.</p>
 					<div class="col-md-4 col-md-pull-8 animate-box" data-animate-effect="fadeInRight">
 						<div class="mt">
 							<h3>Página de productos</h3>
-							
+							<p>Esta es la página que se muestra si seleccionaste la opción "Únete como consultor"</p>
 							<ul class="list-nav">
 								<li><i class="icon-plus"></i>Kit básico del consultor</li>
 								<li><i class="icon-plus"></i>Opción de paquetes de inicio</li>
 								<li><i class="icon-plus"></i>Comprar otros productos</li>
 								<li><i class="icon-plus"></i>Promociones</li>
 								<li><i class="icon-plus"></i>Belleza</li>
-								<li><i class="icon-plus"></i>Ayuda de ventas</li>
+								<li><i class="icon-plus"></i><a href="https://www.immunotec.com/eduardoroblesespinosa/enrollment/productlist">https://www.immunotec.com/eduardoroblesespinosa/enrollment/productlist</a></li>
 							</ul>
 						</div>
 					</div>
@@ -344,16 +344,14 @@ Exclusivamente en tu primera compra.</p>
 					<div class="col-md-4 animate-box" data-animate-effect="fadeInRight">
 						<div class="mt">
 							<div>
-								<h4><i class="icon-plus"></i>Real Project For Real Solutions</h4>
-								<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
+								<h4><i class="icon-plus"></i>Registro de cliente</h4>
+								<p>Esta es la página que se muestra si seleccionaste la opción "Únete como cliente" </p>
 							</div>
 							<div>
-								<h4><i class="icon-plus"></i>Real Project For Real Solutions</h4>
-								<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
-							</div>
+								<h4><i class="icon-plus"></i>Formulario de registro de cliente</h4>
+															</div>
 							<div>
-								<h4><i class="icon-plus"></i>Real Project For Real Solutions</h4>
-								<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
+								<a href="https://www.immunotec.com/eduardoroblesespinosa/account/register">www.immunotec.com/eduardoroblesespinosa/account/register</a>
 							</div>
 						</div>
 					</div>
