--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@ Exclusivamente en tu primera compra.</p>
 								<p>Esta es la página que se muestra si seleccionaste la opción "Únete como cliente" </p>
 							</div>
 							<div>
-								<h4><i class="icon-plus"></i>Formulario de registro de cliente</h4>
+								<h4><i class="icon-plus"></i>Formulario de registro del cliente</h4>
 															</div>
 							<div>
 								<a href="https://www.immunotec.com/eduardoroblesespinosa/account/register">www.immunotec.com/eduardoroblesespinosa/account/register</a>
