--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@ Exclusivamente en tu primera compra.</p>
 					</div>
 					<div class="col-md-4 col-md-pull-8 animate-box" data-animate-effect="fadeInRight">
 						<div class="mt">
-							<h3>Página de productos</h3>
+							<h3>Página Productos</h3>
 							<p>Esta es la página que se muestra si seleccionaste la opción "Únete como consultor"</p>
 							<ul class="list-nav">
 								<li><i class="icon-plus"></i>Kit básico del consultor</li>
@@ -350,7 +350,8 @@ Exclusivamente en tu primera compra.</p>
 					<div class="col-md-4 animate-box" data-animate-effect="fadeInRight">
 						<div class="mt">
 							<div>
-								<h4><i class="icon-plus"></i>Registro de cliente</h4>
+								<h3>Página Registro</h3>
+								<h4><i class="icon-plus"></i>Registro del cliente</h4>
 								<p>Esta es la página que se muestra si seleccionaste la opción "Únete como cliente" </p>
 							</div>
 							<div>
