--- a/index.html
+++ b/index.html
@@ -326,11 +326,11 @@ Exclusivamente en tu primera compra.</p>
 							<h3>Página Productos</h3>
 							<p>Esta es la página que se muestra si seleccionaste la opción "Únete como consultor"</p>
 							<ul class="list-nav">
-								<li><i class="icon-plus"></i>Kit básico del consultor</li>
-								<li><i class="icon-plus"></i>Opción de paquetes de inicio</li>
-								<li><i class="icon-plus"></i>Comprar otros productos</li>
-								<li><i class="icon-plus"></i>Promociones</li>
-								<li><i class="icon-plus"></i>Belleza</li>
+								<li><i class="icon-plus"></i><h4>Kit básico del consultor</h4></li>
+								<li><i class="icon-plus"></i><h4>Opción de paquetes de inicio</h4></li>
+								<li><i class="icon-plus"></i><h4>Comprar otros productos</h4></li>
+								<li><i class="icon-plus"></i><h4>Promociones</h4></li>
+								<li><i class="icon-plus"></i><h4>Belleza</h4></li>
 								<li><i class="icon-plus"></i><a href="https://www.immunotec.com/eduardoroblesespinosa/enrollment/productlist">https://www.immunotec.com/eduardoroblesespinosa/enrollment/productlist</a></li>
 							</ul>
 						</div>
