--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@ Exclusivamente en tu primera compra.</p>
 					<div class="col-md-4 col-md-pull-8 animate-box" data-animate-effect="fadeInRight">
 						<div class="mt">
 							<h3>Página Productos</h3>
-							<p>Esta es la página que se muestra si seleccionaste la opción "Únete como consultor"</p>
+							<p>Es la página que se muestra si seleccionaste la opción "Únete como consultor"</p>
 							<ul class="list-nav">
 								<li><i class="icon-plus"></i><h4>Kit básico del consultor</h4></li>
 								<li><i class="icon-plus"></i><h4>Opción de paquetes de inicio</h4></li>
@@ -351,7 +351,7 @@ Exclusivamente en tu primera compra.</p>
 						<div class="mt">
 							<div>
 								<h3>Página Registro</h3>
-								<p>Esta es la página que se muestra si seleccionaste la opción "Únete como cliente" </p>
+								<p>Es la página que se muestra si seleccionaste la opción "Únete como cliente" </p>
 								<h4><i class="icon-plus"></i>Registro del cliente</h4>
 								</div>
 							<div>
