--- a/index.html
+++ b/index.html
@@ -381,25 +381,25 @@ Exclusivamente en tu primera compra.</p>
 				<div class="col-md-4 animate-box">
 					<div class="testimony">
 						<blockquote>
-							&ldquo;Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius&rdquo;
+							&ldquo;La mejor opción para incrementar los niveles de Glutation en el organismo es Immunocal. Immunocal es un suplemento natural que funciona intracelularmente para incrementar los niveles de Glutation de forma natural, es un aislado de suero de leche que no produce efectos secundarios y que apoya al cuerpo a producir sus propias defensas. Se ha comprobado clínicamente que este producto logra elevar los niveles de Glutation y ayuda a mantener un sistema inmunologico sano.&rdquo;
 						</blockquote>
-						<p class="author"><cite>John Doe</cite></p>
+						<p class="author"><cite>Moise Louis</cite></p>
 					</div>
 				</div>
 				<div class="col-md-4 animate-box">
 					<div class="testimony">
 						<blockquote>
-							&ldquo;Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius&rdquo;
+							&ldquo;Immunocal es la única forma comprobada clínicamente de elevar el sistema inmunologico, con 36 estudios clínicos publicados en revistas medicas de prestigio, y se encuentra en el Libro de Referencias Medicas de E.U. y de Canada, así como el Libro Rojo Farmacéutico en E.U. &rdquo;
 						</blockquote>
-						<p class="author"><cite>Rob Smith</cite></p>
+						<p class="author"><cite>Veronica Herrera</cite></p>
 					</div>
 				</div>
 				<div class="col-md-4 animate-box">
 					<div class="testimony">
 						<blockquote>
-							&ldquo;Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius&rdquo;
+							&ldquo;El respaldo de Immunocal ha provocado que muchos médicos comiencen a utilizarlo en sus pacientes, pues 37 estudios clínicos y un respaldo de mas de 35 años de investigación no pueden pasarse por alto, ademas del beneficio de salud, bienestar y mejores finanzas pues nos ha ayudado a mantener un ingreso extra y mejorar la calidad de vida de mi familia.&rdquo;
 						</blockquote>
-						<p class="author"><cite>Jane Doe</cite></p>
+						<p class="author"><cite>Lupita Villaseñor</cite></p>
 					</div>
 				</div>
 			</div>
